--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -44,3 +44,23 @@
   right: 20px;
   border-radius: 50px;;
 }
+.creation_button {
+  background-color: black;
+  color: white;
+  border: none;
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
+  font-weight: 100;
+  border-radius: 8px;
+  position: absolute;
+  bottom: 40px;
+  right: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.plus_icon {
+  width: 30px;
+  height: 30px;
+}
