--- a/src/app/user/page.module.css
+++ b/src/app/user/page.module.css
@@ -1,36 +1,36 @@
 .body {
-    padding-left: 20px;
-    padding-right: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .user_name {
-    text-align: center;
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 15%;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 15%;
 }
 
 .user_img {
-    margin: 0 auto;
-    height: 150px;
-    width: 150px;
-    border-radius: 100px;
-    background-color: #6084a2;
-    margin-bottom: 25px;
+  margin: 0 auto;
+  height: 150px;
+  width: 150px;
+  border-radius: 100px;
+  background-color: #6084a2;
+  margin-bottom: 25px;
 }
 
 .sub_title {
-    font-size: 18px;
-    font-weight: 600;
-    margin-bottom: 25px;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 25px;
 }
 .line_graph {
-    width: 100%;
-    height: 10px;
-    border-radius: 10px;
-    background-color: #E0E0E0;
+  width: 100%;
+  height: 10px;
+  border-radius: 10px;
+  background-color: #e0e0e0;
 }
 .level {
-    margin-bottom: 12px;
-    font-weight: 500;
+  margin-bottom: 12px;
+  font-weight: 500;
 }
