--- a/src/app/user/page.module.css
+++ b/src/app/user/page.module.css
@@ -34,3 +34,19 @@
   margin-bottom: 12px;
   font-weight: 500;
 }
+
+.tree_container {
+  position: relative;
+  width: 100%;
+  height: 300px; /* 필요시 조절 가능 */
+  background-color: #eaffea;
+  border-radius: 12px;
+  overflow: hidden;
+  margin-top: 20px;
+}
+
+.tree_image {
+  position: absolute;
+  width: 40px;
+  height: auto;
+}
