--- a/src/app/user/page.module.css
+++ b/src/app/user/page.module.css
@@ -1,65 +1,44 @@
 .body {
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 0 20px;
 }
 
 .user_name {
   text-align: center;
   font-size: 20px;
   font-weight: 600;
-  margin-bottom: 15%;
+  margin-bottom: 25px;
 }
 
 .user_img {
-  margin: 0 auto;
-  height: 150px;
+  margin: 0 auto 25px;
   width: 150px;
-  border-radius: 100px;
+  height: 150px;
+  border-radius: 50%;
   background-color: #6084a2;
-  margin-bottom: 25px;
 }
 
 .sub_title {
   font-size: 18px;
   font-weight: 600;
-  margin-bottom: 25px;
+  margin: 30px 0 20px;
 }
+
 .line_graph {
   width: 100%;
   height: 10px;
-  border-radius: 10px;
   background-color: #e0e0e0;
-  display: flex; /* 추가 */
-  overflow: hidden; /* 둥근 모서리 처리 */
-}
-.level {
-  margin-bottom: 12px;
-  font-weight: 500;
-}
-
-.tree_container {
-  position: relative;
-  width: 100%;
-  height: 300px; /* 필요시 조절 가능 */
-  background-color: #eaffea;
-  border-radius: 12px;
+  border-radius: 10px;
+  display: flex;
   overflow: hidden;
-  margin-top: 20px;
-}
-
-.tree_image {
-  position: absolute;
-  width: 40px;
-  height: auto;
 }
 
 .legend {
   display: flex;
   justify-content: center;
-  margin-top: 10px;
-  gap: 15px;
-  font-size: 14px;
   align-items: center;
+  gap: 15px;
+  margin: 10px 0 0;
+  font-size: 14px;
 }
 
 .legend_item {
@@ -72,4 +51,19 @@
   width: 12px;
   height: 12px;
   border-radius: 2px;
+}
+
+.tree_container {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  background-color: #eaffea;
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+.tree_image {
+  position: absolute;
+  width: 40px;
+  height: auto;
 }
