--- a/src/app/user/page.module.css
+++ b/src/app/user/page.module.css
@@ -6,7 +6,7 @@
   text-align: center;
   font-size: 20px;
   font-weight: 600;
-  margin-bottom: 25px;
+  margin-bottom: 50px;
 }
 
 .user_img {
@@ -15,12 +15,14 @@
   height: 150px;
   border-radius: 50%;
   background-color: #6084a2;
+  margin-top: 30px;
 }
 
 .sub_title {
   font-size: 18px;
   font-weight: 600;
-  margin: 30px 0 20px;
+  margin-top: 60px;
+  margin-bottom: 25px;
 }
 
 .line_graph {
@@ -58,7 +60,7 @@
   position: relative;
   width: 100%;
   height: 300px;
-  background-color: #eaffea;
+  background-color: #AEC8A4;
   border-radius: 12px;
   overflow: hidden;
 }
