--- a/src/app/user/page.module.css
+++ b/src/app/user/page.module.css
@@ -14,7 +14,7 @@
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  background-color: #6084a2;
+  background-color: #ededed;
   margin-top: 30px;
 }
 
@@ -71,3 +71,22 @@
   height: auto;
 }
 
+.user_button {
+  height: 35px;
+  width: 35px;
+  position: absolute;
+  right: 20px;
+  border-radius: 50px;;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.user_icon {
+  height: 60px;
+  width: 60px;
+}
+.user_img {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
