--- a/src/components/Room.module.css
+++ b/src/components/Room.module.css
@@ -12,5 +12,12 @@
     width: 65px;
     height: 65px;
     border-radius: 40px;
-    background-color: rgb(255, 143, 6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f2f2f2;
+}
+.leaf {
+    width: 50px;
+    height: 50px;
 }
